# EXCEL-Differ-Git

./: .gitignore  CLAUDE.md  README.md  TEST_REPORT.md  USAGE.md  diff_result.csv  download_dependencies.py  install_offline.bat  install_offline.sh  pyproject.toml  requirements.txt  test_config_v2.xlsx
.claude/: settings.local.json
excel_differ/: __init__.py  cli.py  differ.py  excel_reader.py  formatter.py  git_handler.py
test/: create_large_test.py  create_medium_test.py  create_test_excel.py  test_config_v1.xlsx
